package api_TrasportiLogistic;

public class Automezzo {
    public void VelocitàMedia(Tratta tratta) {
    }
}
