package api_TrasportiLogistic;

public class Luogo {
}
