package api_TrasportiLogistic;

public class Percorso {
    private java.util.Vector<Tratta> elencoTratte;

    public void AggiungiTratta() {
    }

    public void methodCalcolaLuoghiPercorsi() {
    }

    public void CalcolaDistanza() {
    }
}
