package api_TrasportiLogistic;

public class Tratta {
    private Luogo origine;
    private Luogo destinazione;

    public void CalcolaDistanza() {
    }

    public void KmPerTipologia() {
    }
}
