package api_TrasportiLogistic;

public class Viaggio {
    private Percorso percorso;

    public void CalcolaDurata() {
    }

    public void CalcolaCosto() {
    }
}
