@startuml

title __API_TRASPORTILOGISTIC's Class Diagram__\n

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Automezzo {
          + Velocit‡Media()
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Luogo {
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Percorso {
          - elencoTratte : Vector<Tratta>
          + AggiungiTratta()
          + CalcolaDistanza()
          + methodCalcolaLuoghiPercorsi()
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.TipiStrada {
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Tratta {
          + CalcolaDistanza()
          + KmPerTipologia()
      }
    }
  }
  

  namespace  {
    namespace pi_TrasportiLogistic {
      class api_TrasportiLogistic.Viaggio {
          + CalcolaCosto()
          + CalcolaDurata()
      }
    }
  }
  

  api_TrasportiLogistic.Tratta o-- api_TrasportiLogistic.Luogo : destinazione
  api_TrasportiLogistic.Tratta o-- api_TrasportiLogistic.Luogo : origine
  api_TrasportiLogistic.Viaggio o-- api_TrasportiLogistic.Percorso : percorso


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
